k8s/infra/dashboard-bridge.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-bridge
  namespace: sparta-msa
spec:
  type: ExternalName
  externalName: kubernetes-dashboard.kubernetes-dashboard.svc.cluster.local
  ports:
  - port: 80
    targetPort: 80
